// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeEditorElement do not add children 1`] = `Object {}`;

exports[`normalizeEditorElement do not remove children 1`] = `
Object {
  "children": Array [],
}
`;

exports[`normalizeEditorElement do not remove children 2`] = `
Object {
  "children": Array [
    "",
  ],
}
`;

exports[`normalizeEditorElement do not remove children 3`] = `
Object {
  "children": Array [
    ".",
  ],
}
`;

exports[`normalizeEditorElement merges adjacent strings 1`] = `
Object {
  "children": Array [
    "ab",
    Object {
      "children": Array [
        "abc",
        Object {
          "children": Array [
            "a",
            Object {},
            "bc",
          ],
        },
      ],
    },
    "ab",
  ],
}
`;
